--- a/matcha/index.html
+++ b/matcha/index.html
@@ -365,14 +365,11 @@
  <div class="card">
    <div class="card-block">
      <pre class="card-text clickselect">
-      @misc{guedon2024matchagaussiansatlascharts,
+      @article{guedon2024matcha,
         title={MAtCha Gaussians: Atlas of Charts for High-Quality Geometry and Photorealism From Sparse Views}, 
         author={Gu{\'e}don, Antoine and Ichikawa, Tomoki and Yamashita, Kohei and Nishino, Ko},
+        journal={arXiv},
         year={2024},
-        eprint={2412.06767},
-        archivePrefix={arXiv},
-        primaryClass={cs.CV},
-        url={https://arxiv.org/abs/2412.06767}, 
       }
     </pre>
    </div>
