--- a/matcha/index.html
+++ b/matcha/index.html
@@ -67,7 +67,7 @@
        <nobr><a href="https://anttwo.github.io/">Antoine Gu&eacutedon<sup>1</sup></a></nobr> &emsp;
        <nobr><a href="https://scholar.google.com/citations?user=-LzEJVwAAAAJ&hl=en">Tomoki Ichikawa<sup>2</sup></a></nobr> &emsp;
        <nobr><a href="https://kyamashita5.github.io/">Kohei Yamashita<sup>2</sup></a></nobr> &emsp;
-       <nobr><a href="https://scholar.google.com/citations?user=SXXEZhYAAAAJ&hl=en">Ko Nishino<sup>2</sup></a></nobr>
+       <nobr><a href="https://vision.ist.i.kyoto-u.ac.jp/">Ko Nishino<sup>2</sup></a></nobr>
      </h4>
      <p style="font-size: 20px; text-align: center;"><nobr><sup>1</sup>LIGM, Ecole des Ponts</nobr>, <nobr>Univ Gustave Eiffel</nobr>, CNRS</nobr>, France<br></p>
      <p style="font-size: 20px; text-align: center;"><nobr><sup>2</sup>Graduate School of Informatics</nobr>, Kyoto University</nobr>, Japan<br></p>
