--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <a href="https://anttwo.github.io/"><b>Antoine Gu&eacutedon</b></a>, 
                     <a href="https://scholar.google.com/citations?user=-LzEJVwAAAAJ&hl=en">Tomoki Ichikawa</a>,
                     <a href="https://kyamashita5.github.io/">Kohei Yamashita</a>,
-                    <a href="https://scholar.google.com/citations?user=SXXEZhYAAAAJ&hl=en">Ko Nishino</a>
+                    <a href="https://vision.ist.i.kyoto-u.ac.jp/">Ko Nishino</a>
                 </div>
                 We propose a novel surface representation for reconstructing high-quality 3D meshes with photorealistic rendering from sparse-view images.
                 Our key idea is to model the underlying scene geometry as an Atlas of Charts which we render with 2D Gaussian surfels.
