--- a/matcha/index.html
+++ b/matcha/index.html
@@ -159,7 +159,7 @@
     
     <!-- Garden -->
     <div class="item active">
-      <iframe src="https://drive.google.com/file/d/1HrFkHNZqX5umnjAMb3FuOhLlCH2Xl4Ou/preview?autoplay=1" 
+      <iframe src="https://drive.google.com/file/d/1HrFkHNZqX5umnjAMb3FuOhLlCH2Xl4Ou/preview" 
             style="width:100%; height:310px" 
             frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
