--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     </div>
 
     <!-- Publications -->
+     <br>
     <div class="container">
         <h2>Publications</h2>
         <hr/>
@@ -191,6 +192,7 @@
                 Built from RGB images only, it can be rendered in real-time and animated using traditional animation tools. <br>
                 <a class="label label-info" href="https://arxiv.org/abs/2403.14554"><i class="fa fa-file-text"></i>&nbsp;&nbsp;Paper</a>
                 <a class="label label-info" href="https://github.com/Anttwo/Frosting"><i class="fa fa-code fa-lg" style="vertical-align: center; margin-top: 0px"></i>&nbsp;&nbsp;Code</a>
+                <a class="label label-info" href="https://github.com/Anttwo/sugar_frosting_blender_addon/"><i class="fa fa-gamepad fa-lg" style="vertical-align: center; margin-top: 0px"></i>&nbsp;&nbsp;Blender Add-On</a>
                 <!-- <a class="label label-info" href="./ref.bib"><i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX</a> -->
                 <a class="label label-info" type="button" data-toggle="collapse" data-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
                     <i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX
@@ -235,6 +237,7 @@
                 (Blender, Unity, Unreal Engine, etc.) by manipulating the mesh instead of the Gaussians themselves. <br>
                 <a class="label label-info" href="https://arxiv.org/abs/2311.12775"><i class="fa fa-file-text"></i>&nbsp;&nbsp;Paper</a>
                 <a class="label label-info" href="https://github.com/Anttwo/SuGaR"><i class="fa fa-code fa-lg" style="vertical-align: center; margin-top: 0px"></i>&nbsp;&nbsp;Code</a>
+                <a class="label label-info" href="https://github.com/Anttwo/sugar_frosting_blender_addon/"><i class="fa fa-gamepad fa-lg" style="vertical-align: center; margin-top: 0px"></i>&nbsp;&nbsp;Blender Add-On</a>
                 <!-- <a class="label label-info" href="./ref.bib"><i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX</a> -->
                 <a class="label label-info" type="button" data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
                     <i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX
