--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
     <div class="container">
         <h2>News</h2>
         <hr/>
-        <p class="label date">11-2024</p> I am very honored to be selected as one of the Top Reviewers for NeurIPS 2024!<br>
+        <p class="label date">11-2024</p> I am very honored to be selected as one of the <a href="https://neurips.cc/Conferences/2024/ProgramCommittee#top-reviewers">Top Reviewers for NeurIPS 2024</a>!<br>
         <p class="label date">10-2024</p> I was in Milan for ECCV 2024, and had the pleasure to give an oral presentation of <a href="https://anttwo.github.io/frosting/">Frosting</a> and to meet many great people in the field.<br>
-        <p class="label date">09-2024</p> I am very honored to be selected as one of the Outstanding Reviewers for ECCV 2024!<br>
+        <p class="label date">09-2024</p> I am very honored to be selected as one of the <a href="https://eccv.ecva.net/Conferences/2024/Reviewers#all-outstanding-reviewers">Outstanding Reviewers for ECCV 2024</a>!<br>
         <p class="label date">09-2024</p> We just released a <a href="https://github.com/Anttwo/sugar_frosting_blender_addon/">Blender Add-On</a> to import, edit and animate 3D scenes reconstructed with SuGaR and Frosting without a single line of code. <br>
         <p class="label date">08-2024</p> <a href="https://anttwo.github.io/frosting/">Gaussian Frosting</a> paper has been selected for an oral presentation at ECCV 2024!<br>
         <p class="label date">07-2024</p> <a href="https://anttwo.github.io/frosting/">Gaussian Frosting</a> paper has been accepted to ECCV 2024!<br>
