--- a/matcha/index.html
+++ b/matcha/index.html
@@ -266,6 +266,38 @@
     
     We believe MAtCha will serve as a foundational tool for any visual application in vision, graphics, 
     and robotics that require explicit geometry in addition to photorealism. 
+
+    <br><br>
+
+    <div class="row" style="text-align:center">
+      <div class="col-xs-4 col-lg-4">
+        <!-- <img src="https://anttwo.github.io/matcha/images/mesh_extraction/tsdf_multires.png"  -->
+        <img src="./images/examples/buzz1_gt_rgb.jpg"
+        alt="buzz1_gt_rgb.jpg" class="text-center" style="width: 100%; max-width: 1000px">
+        <br><br>
+        <img src="./images/examples/re_gt_rgb.jpg"
+        alt="re_gt_rgb.jpg" class="text-center" style="width: 100%; max-width: 1000px">
+       <p style="text-align:center">(a) GT RGB Image</p>
+     </div>
+    <div class="col-xs-4 col-lg-4">
+        <!-- <img src="https://anttwo.github.io/matcha/images/mesh_extraction/tsdf_multires.png"  -->
+        <img src="./images/examples/buzz1_matcha_mesh.png"
+        alt="buzz1_matcha_mesh.png" class="text-center" style="width: 100%; max-width: 1000px">
+        <br><br>
+        <img src="./images/examples/re_matcha_mesh.png"
+        alt="re_matcha_mesh.png" class="text-center" style="width: 100%; max-width: 1000px">
+      <p style="text-align:center">(b) MAtCha Mesh (10 training views)</p>
+    </div>
+   <div class="col-xs-4 col-lg-4">
+      <!-- <img src="https://anttwo.github.io/matcha/images/mesh_extraction/tsdf_multires.png"  -->
+      <img src="./images/examples/buzz1_spurfies_mesh.png"
+      alt="buzz1_spurfies_mesh.png" class="text-center" style="width: 100%; max-width: 1000px">
+      <br><br>
+      <img src="./images/examples/re_spurfies_mesh.png"
+      alt="re_spurfies_mesh.png" class="text-center" style="width: 100%; max-width: 1000px">
+    <p style="text-align:center">(c) <a href="https://geometric-rl.mpi-inf.mpg.de/spurfies/">Spurfies</a> Mesh (10 training views)</p>
+  </div>
+    </div>
  </p>
 <!-- </div> -->
 
