Updated CVPR acceptance for MAtCha.

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     <div class="container">
         <h2>News</h2>
         <hr/>
+        <p class="label date">03-2025</p> <a href="https://anttwo.github.io/matcha/">MAtCha</a> paper has been accepted to CVPR 2025!<br>
         <p class="label date">11-2024</p> I am very honored to be selected as one of the <a href="https://neurips.cc/Conferences/2024/ProgramCommittee#top-reviewers">Top Reviewers for NeurIPS 2024</a>!<br>
         <p class="label date">10-2024</p> I was in Milan for ECCV 2024, and had the pleasure to give an oral presentation of <a href="https://anttwo.github.io/frosting/">Frosting</a> and to meet many great people in the field.<br>
         <p class="label date">09-2024</p> I am very honored to be selected as one of the <a href="https://eccv.ecva.net/Conferences/2024/Reviewers#all-outstanding-reviewers">Outstanding Reviewers for ECCV 2024</a>!<br>
@@ -137,7 +138,7 @@
                 <a href="https://anttwo.github.io/matcha/">
                     <h4>MAtCha Gaussians: Atlas of Charts for High-Quality Geometry and Photorealism From Sparse Views</h4>
                 </a>
-                <p style="font-size: 20px;">arXiv 2024 (preprint)</p>
+                <p style="font-size: 20px;">CVPR 2025</p>
                 <div>
                     <a href="https://anttwo.github.io/"><b>Antoine Gu&eacutedon</b></a>, 
                     <a href="https://scholar.google.com/citations?user=-LzEJVwAAAAJ&hl=en">Tomoki Ichikawa</a>,
@@ -157,11 +158,11 @@
                     <div class="card">
                         <div class="card-block">
                             <pre class="card-text clickselect">
-                                @article{guedon2024matcha,
+                                @article{guedon2025matcha,
                                     title={MAtCha Gaussians: Atlas of Charts for High-Quality Geometry and Photorealism From Sparse Views}, 
                                     author={Gu{\'e}don, Antoine and Ichikawa, Tomoki and Yamashita, Kohei and Nishino, Ko},
-                                    journal={arXiv},
-                                    year={2024},
+                                    journal={CVPR},
+                                    year={2025},
                                 }
                             </pre>
                         </div>
