--- a/matcha/index.html
+++ b/matcha/index.html
@@ -58,7 +58,7 @@
 <div class="container" style="text-align:center; padding-top:2rem 15px">
  <div class="row" style="text-align:center">
    <h1 style="font-size: 60px;">MAtCha Gaussians: <br>Atlas of Charts for High-Quality Geometry and Photorealism From Sparse Views</h1>
-   <h1 style="font-size: xxx-large;">arXiv 2024</h1>
+   <h1 style="font-size: xxx-large;">CVPR 2025</h1>
  </div>
  <div class="row" style="text-align:center">
    <div class="col-xs-0 col-md-2"></div>
@@ -400,11 +400,11 @@
  <div class="card">
    <div class="card-block">
      <pre class="card-text clickselect">
-      @article{guedon2024matcha,
+      @article{guedon2025matcha,
         title={MAtCha Gaussians: Atlas of Charts for High-Quality Geometry and Photorealism From Sparse Views}, 
         author={Gu{\'e}don, Antoine and Ichikawa, Tomoki and Yamashita, Kohei and Nishino, Ko},
-        journal={arXiv},
-        year={2024},
+        journal={CVPR},
+        year={2025},
       }
     </pre>
    </div>
