--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     <div class="container">
         <h2>News</h2>
         <hr/>
+        <p class="label date">04-2025</p> We just released the code for <a href="https://anttwo.github.io/matcha/"></a>MAtCha</a>!<br>
         <p class="label date">03-2025</p> <a href="https://anttwo.github.io/matcha/">MAtCha</a> paper has been accepted to CVPR 2025!<br>
         <p class="label date">11-2024</p> I am very honored to be selected as one of the <a href="https://neurips.cc/Conferences/2024/ProgramCommittee#top-reviewers">Top Reviewers for NeurIPS 2024</a>!<br>
         <p class="label date">10-2024</p> I was in Milan for ECCV 2024, and had the pleasure to give an oral presentation of <a href="https://anttwo.github.io/frosting/">Frosting</a> and to meet many great people in the field.<br>
@@ -149,7 +150,7 @@
                 Our key idea is to model the underlying scene geometry as an Atlas of Charts which we render with 2D Gaussian surfels.
                 Combined with a sparse-view SfM model like MASt3R-SfM, MAtCha can recover sharp meshes of both foreground and background objects within minutes from a few unposed RGB images.  <br>
                 <a class="label label-info" href="https://arxiv.org/abs/2412.06767"><i class="fa fa-file-text"></i>&nbsp;&nbsp;Paper</a>
-                <a class="label label-info" href="https://github.com/Anttwo/MAtCha"><i class="fa fa-code fa-lg" style="vertical-align: center; margin-top: 0px"></i>&nbsp;&nbsp;Code (coming soon)</a>
+                <a class="label label-info" href="https://github.com/Anttwo/MAtCha"><i class="fa fa-code fa-lg" style="vertical-align: center; margin-top: 0px"></i>&nbsp;&nbsp;Code</a>
                 <!-- <a class="label label-info" href="./ref.bib"><i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX</a> -->
                 <a class="label label-info" type="button" data-toggle="collapse" data-target="#collapse5" aria-expanded="false" aria-controls="collapse4">
                     <i class="fa fa-commenting fa-lg" style="vertical-align:center;margin-top:0px"></i>&nbsp;&nbsp;BibTeX
