MAtCha CVPR 2025 Highlight added

--- a/matcha/index.html
+++ b/matcha/index.html
@@ -58,7 +58,7 @@
 <div class="container" style="text-align:center; padding-top:2rem 15px">
  <div class="row" style="text-align:center">
    <h1 style="font-size: 60px;">MAtCha Gaussians: <br>Atlas of Charts for High-Quality Geometry and Photorealism From Sparse Views</h1>
-   <h1 style="font-size: xxx-large;">CVPR 2025</h1>
+   <h1 style="font-size: xxx-large;">CVPR 2025 (Highlight)</h1>
  </div>
  <div class="row" style="text-align:center">
    <div class="col-xs-0 col-md-2"></div>
