--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
     <div class="container">
         <h2>News</h2>
         <hr/>
-        <p class="label date">04-2025</p> We just released the code for <a href="https://anttwo.github.io/matcha/"></a>MAtCha</a>!<br>
+        <p class="label date">04-2025</p> <a href="https://anttwo.github.io/matcha/">MAtCha</a> has been selected for a Highlight at CVPR 2025!<br>
+        <p class="label date">04-2025</p> We just released the code for <a href="https://anttwo.github.io/matcha/">MAtCha</a>!<br>
         <p class="label date">03-2025</p> <a href="https://anttwo.github.io/matcha/">MAtCha</a> paper has been accepted to CVPR 2025!<br>
         <p class="label date">11-2024</p> I am very honored to be selected as one of the <a href="https://neurips.cc/Conferences/2024/ProgramCommittee#top-reviewers">Top Reviewers for NeurIPS 2024</a>!<br>
         <p class="label date">10-2024</p> I was in Milan for ECCV 2024, and had the pleasure to give an oral presentation of <a href="https://anttwo.github.io/frosting/">Frosting</a> and to meet many great people in the field.<br>
@@ -139,7 +140,7 @@
                 <a href="https://anttwo.github.io/matcha/">
                     <h4>MAtCha Gaussians: Atlas of Charts for High-Quality Geometry and Photorealism From Sparse Views</h4>
                 </a>
-                <p style="font-size: 20px;">CVPR 2025</p>
+                <p style="font-size: 20px;">CVPR 2025 (Highlight)</p>
                 <div>
                     <a href="https://anttwo.github.io/"><b>Antoine Gu&eacutedon</b></a>, 
                     <a href="https://scholar.google.com/citations?user=-LzEJVwAAAAJ&hl=en">Tomoki Ichikawa</a>,
