Outstanding reviewer for CVPR 2025.

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     <div class="container">
         <h2>News</h2>
         <hr/>
+        <p class="label date">05-2025</p> I am very honored to be selected as one of the <a href="https://cvpr.thecvf.com/Conferences/2025/ProgramCommittee#all-outstanding-reviewer">Outstanding Reviewers for CVPR 2025</a>!<br>
         <p class="label date">04-2025</p> <a href="https://anttwo.github.io/matcha/">MAtCha</a> has been selected for a Highlight at CVPR 2025!<br>
         <p class="label date">04-2025</p> We just released the code for <a href="https://anttwo.github.io/matcha/">MAtCha</a>!<br>
         <p class="label date">03-2025</p> <a href="https://anttwo.github.io/matcha/">MAtCha</a> paper has been accepted to CVPR 2025!<br>
