Gradient transition between carousel and webpage body.

--- a/defense/index.html
+++ b/defense/index.html
@@ -208,6 +208,8 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
+        <!-- Gradient transition band -->
+        <div style="height: 60px; background: linear-gradient(to bottom, #000000, var(--bg-color)); width: 100%;"></div>
     </div>
 
     <!-- CSS for bounce animation and responsive design -->
