Better profile picture size on smartphone

--- a/defense/index.html
+++ b/defense/index.html
@@ -251,6 +251,11 @@
             .carousel-scroll-indicator i {
                 font-size: 16px !important;
             }
+            
+            /* Medium-sized profile picture on tablet */
+            img[alt="Profile picture"] {
+                height: 320px !important;
+            }
         }
 
         @media screen and (max-width: 480px) {
@@ -318,6 +323,11 @@
             /* Adjust author links */
             a {
                 font-size: 14px !important;
+            }
+            
+            /* Smaller profile picture on mobile */
+            img[alt="Profile picture"] {
+                height: 250px !important;
             }
         }
     </style>
