Better title for Blender add-on

--- a/defense/index.html
+++ b/defense/index.html
@@ -169,7 +169,7 @@
                         </div>
                         <div class="carousel-text-container" style="background: #000; padding: 20px 20px 90px 20px; text-align: center;">
                             <h3 style="color: white; font-weight: 300; margin-bottom: 5px;">SuGaR x Frosting</h3>
-                            <p style="color: white; opacity: 0.9; margin-bottom: 3px;">Blender Addon</p>
+                            <p style="color: white; opacity: 0.9; margin-bottom: 3px;">Blender Addon for Editing Radiance Fields using SuGaR and Frosting</p>
                             <p style="color: white; opacity: 0.7; margin: 0;">ECCV 2024 (Oral)</p>
                         </div>
                     </div>
